--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -21,6 +21,7 @@
     <br>
     <br>
     <br>
-    <h1 class="header center white-text text-lighten-2">{{ .Site.Title }}</h1>
+    <h1 class="header center white-text text-lighten-2">{{ .Site.Params.site_author }}</h1>
+    <h3 class="header center white-text text-lighten-2">{{ .Site.Params.site_description}}</h3>
     <div class="parallax"><img src="/images/parallax.png"></div>
   </div>
