Add newsletter subscribe

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -9,9 +9,6 @@
         {{ end }}
         {{ partial "pagination" . }}
     </div>
-    <div class="col s2 offset-l2">
-      <iframe width="100%" height="400" src="https://leanpub.com/aopinphp/embed" frameborder="0" allowtransparency="true"></iframe>
-    </div>
-  </div>
+    {{ partial "sidebar" . }}
 </div>
 {{ partial "footer" . }}
