--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,9 +9,7 @@
       <h3>{{ .Site.Data.l10n.comments.comments }}</h3>
       {{ template "_internal/disqus.html" . }}
     </div>
-    <div class="col s2 offset-l2">
-      <iframe width="100%" height="400" src="https://leanpub.com/aopinphp/embed" frameborder="0" allowtransparency="true"></iframe>
-    </div>
+    {{ partial "sidebar" . }}
   </div>
 </div>
 
