--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,8 +1,9 @@
-<div class="col s3 offset-l1">
-  <div class="row center">
-    {{ partial "subscribe-form.html" . }}
-  </div>
-  <div class="row center">
-    <iframe width="100%" height="400" src="https://leanpub.com/aopinphp/embed" frameborder="0" allowtransparency="true"></iframe>
-  </div>
+<div class="col s12 m3 offset-l1">
+    <div class="row center">
+        {{ partial "subscribe-form.html" . }}
+    </div>
+    <div class="row center">
+        <iframe width="100%" height="400" src="https://leanpub.com/aopinphp/embed" frameborder="0"
+                allowtransparency="true"></iframe>
+    </div>
 </div>
