--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,5 +1,5 @@
 <div>
     {{ partial "article-header" . }}
-    <p>{{ printf "%s" .Summary | markdownify }}&hellip;</p>
+    <p class="flow-text">{{ printf "%s" .Summary | markdownify }}&hellip;</p>
     <a href="{{ .Permalink }}" title="{{ .Title }}">{{ .Site.Data.l10n.article.read_more }} &raquo;</a>
 </div>
