--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,7 +1,7 @@
 {{ partial "header" . }}
 <div class="section white container">
     <div class="row">
-        <div class="col s8">
+        <div class="col s12 m9">
             {{ $paginator := .Paginate .Data.Pages }}
             {{ range $paginator.Pages }}
             {{ .Render "summary" }}
