--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,9 +1,20 @@
-<div class="col s12 m3 offset-l1">
-    <div class="row center">
-        {{ partial "subscribe-form.html" . }}
+<div class="col s12 m3">
+  <div class="row center">
+      {{ partial "subscribe-form.html" . }}
+  </div>
+  <div class="row center">
+    <div class="card">
+      <div class="card-image">
+        <img src="https://s3.amazonaws.com/titlepages.leanpub.com/aopinphp/hero?1456697060" class="">
+      </div>
+      <div class="card-stacked">
+        <div class="card-action">
+          <a href="https://leanpub.com/aopinphp?utm_campaign=aopinphp&utm_medium=embed&utm_source=www.edzynda.com"
+            class="waves-effect waves-light btn">
+            Buy Now
+          </a>
+        </div>
+      </div>
     </div>
-    <div class="row center">
-        <iframe width="100%" height="400" src="https://leanpub.com/aopinphp/embed" frameborder="0"
-                allowtransparency="true"></iframe>
-    </div>
+  </div>
 </div>
