--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,7 @@
 <div class="section white container">
     <div class="row">
         <div class="col s12 m9">
-            {{ partial "article-header" . }}
+            {{ partial "single-article-header" . }}
             <div class="flow-text">
                 {{ .Content}}
             </div>
