--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
   <title>{{ .Site.Title }}</title>
 
   {{ partial "meta" . }}
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+  <link href="/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/agate.min.css">
 
 
   <!-- Google Analytics -->
   <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', '{{ .Site.Params.google_analytics }}', 'auto');
-  ga('send', 'pageview');
+    ga('create', '{{ .Site.Params.google_analytics }}', 'auto');
+    ga('send', 'pageview');
   </script>
 
 
 </head>
+
 <body>
   <div class="navbar-fixed">
     <nav class="red accent-3" role="navigation">
@@ -35,6 +39,7 @@
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="/">Home</a></li>
           <li><a href="https://leanpub.com/aopinphp">Books</a></li>
+          <li><a href="https://www.youtube.com/channel/UC0Wu-J4_SoFOYVKA8JRuRRg" title="Videos">Videos</a></li>
           <li><a href="//twitter.com/{{ .Site.Social.twitter }}" class="icon-twitter white-text" target="_blank" title="Twitter"></a></li>
           <li><a href="//github.com/{{ .Site.Social.github }}" class="icon-github white-text" target="_blank" title="Github"></a></li>
           <li><a href="//instagram.com/{{ .Site.Social.instagram }}" class="icon-instagram white-text" target="_blank" title="Instagram"></a></li>
@@ -46,14 +51,12 @@
     <br>
     <br>
     <br>
-    <br>
-    {{ if not .IsPage }}
+    <br> {{ if not .IsPage }}
     <h1 class="header center white-text text-lighten-2">{{ .Site.Params.site_author }}</h1>
     <h3 class="header center white-text text-lighten-2">{{ .Site.Params.site_description}}</h3>
     {{ else }}
     <h1 class="header center white-text text-lighten-2">{{ .Title }}</h1>
-    {{ end }}
-    {{ if isset .Params "image" }}
+    {{ end }} {{ if isset .Params "image" }}
     <div class="parallax"><img src="{{ .Params.image }}"></div>
     {{ else }}
     <div class="parallax"><img src="/images/parallax.png"></div>
