add new articles and fix links

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -39,7 +39,7 @@
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="/">Home</a></li>
           <li><a href="https://leanpub.com/aopinphp">Books</a></li>
-          <li><a href="https://www.youtube.com/channel/UC0Wu-J4_SoFOYVKA8JRuRRg" title="Videos">Videos</a></li>
+          <li><a href="/tags/video" title="Videos">Videos</a></li>
           <li><a href="//twitter.com/{{ .Site.Social.twitter }}" class="icon-twitter white-text" target="_blank" title="Twitter"></a></li>
           <li><a href="//github.com/{{ .Site.Social.github }}" class="icon-github white-text" target="_blank" title="Github"></a></li>
           <li><a href="//instagram.com/{{ .Site.Social.instagram }}" class="icon-instagram white-text" target="_blank" title="Instagram"></a></li>
