--- a/layouts/partials/subscribe-form.html
+++ b/layouts/partials/subscribe-form.html
@@ -10,7 +10,7 @@
             MauticSDK.onLoad();
         };
         head.appendChild(script);
-        var MauticDomain = 'https://mautic.mark3labs.com/index.php';
+        var MauticDomain = 'https://mautic.mark3labs.com';
         var MauticLang = {
             'submittingMessage': "Please wait..."
         }
